Changing logging dependency.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15707 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/ivy.xml
+++ b/ivy.xml
@@ -12,7 +12,7 @@
         <dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="*->compile" />
         <dependency org="org.mybatis" name="mybatis" rev="3.0.4"/>
         
-        <dependency org="org.apache.log4j" name="com.springsource.org.apache.log4j" rev="1.2.16"  conf="*->compile" />
+        <dependency org="log4j" name="log4j" rev="1.2.16"/>
         <dependency org="org.codehaus.jackson" name="jackson-xc" rev="1.6.2"/>
         <dependency org="commons-lang" name="commons-lang" rev="2.5"  />
         <dependency org="org.elasticsearch" name="elasticsearch" rev="0.15.0" />
