changed public deployment name
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15710 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-chado-public.properties
+++ b/resource-chado-public.properties
@@ -1,5 +1,5 @@
 deploy.dir=/nfs/pathdb/omixed/tomcat/testing/webapps
-deploy.name=genedb-ws-public
+deploy.name=snapshot-services
 
 alignments=
 showParameters=false
