--- a/resource-chado-public.properties
+++ b/resource-chado-public.properties
@@ -6,7 +6,7 @@ showParameters=false
 
 resource.type=chado-postgres
 
-dbhost=genedb-db
+dbhost=db.genedb.org
 dbport=5432
 dbname=snapshot
 dbuser=genedb_ro
