Added a regions/locations_paged method. Added caching for regions mapper (which required implementing Serializable on a few bean classes).
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15727 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-chado-gv1.properties
+++ b/resource-chado-gv1.properties
@@ -1,5 +1,5 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
-deploy.name=crawl-chado
+deploy.name=services
 
 alignments=/Users/gv1/Documents/Code/alignments.json
 showParameters=true
