--- a/ivy.xml
+++ b/ivy.xml
@@ -34,6 +34,7 @@
         <dependency org="org.springframework" name="org.springframework.transaction" rev="3.0.5.RELEASE"  conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.jdbc" rev="3.0.5.RELEASE" conf="war,compile->compile" />
         <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0" conf="war,compile->*"/>
+        <dependency org="org.mybatis" name="mybatis-hazelcast" rev="1.0.0" conf="war,compile->*"/>
         
     </dependencies>
 </ivy-module>
