--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -34,20 +34,12 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
-    <!-- 
+    <listener>
+        <listener-class>
+            org.genedb.crawl.servlet.CrawlServletContextListener
+        </listener-class>
+    </listener>
     
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    
-    
-     -->
     
     <context-param>
         <param-name>contextConfigLocation</param-name>
