Changed elasticsearch host.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15760 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-elasticsearch-public.properties
+++ b/resource-elasticsearch-public.properties
@@ -5,7 +5,7 @@ alignments=
 showParameters=true
 
 resource.type=elasticsearch-remote
-resource.elasticsearch.address.host=localhost
+resource.elasticsearch.address.host=pathdbsrv1a
 resource.elasticsearch.address.port=9300
 
 
