Fix classpath for command line search loader. Shutdown the cache when done loading.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15762 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/ivy.xml
+++ b/ivy.xml
@@ -11,6 +11,7 @@
         <!-- shared by all -->
         <dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="*->compile" />
         <dependency org="org.mybatis" name="mybatis" rev="3.0.4"/>
+        <dependency org="org.mybatis" name="mybatis-hazelcast" rev="1.0.0" conf="*->*"/>
         
         <dependency org="org.codehaus.jackson" name="jackson-xc" rev="1.7.4"/>
         
@@ -34,7 +35,7 @@
         <dependency org="org.springframework" name="org.springframework.transaction" rev="3.0.5.RELEASE"  conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.jdbc" rev="3.0.5.RELEASE" conf="war,compile->compile" />
         <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0" conf="war,compile->*"/>
-        <dependency org="org.mybatis" name="mybatis-hazelcast" rev="1.0.0" conf="war,compile->*"/>
+        
         
     </dependencies>
 </ivy-module>
