Remove undeploy dependency from the deploy target.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15768 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.xml
+++ b/build.xml
@@ -237,7 +237,7 @@
     <delete file="${deploy.dir}/${build.war.name}.war" />
 </target>
 	
-<target name="deploy" depends="package-war, undeploy" >
+<target name="deploy" depends="package-war" >
 	<fail message="The 'config' property must be set" unless="config"/>
     <copy file="${build.packages.home}/${build.war.name}.war" todir="${deploy.dir}/"/>
 </target>
