--- a/resource-elasticsearch-remote.properties
+++ b/resource-elasticsearch-remote.properties
@@ -9,5 +9,9 @@ resource.elasticsearch.address.host=localhost
 resource.elasticsearch.address.port=9300
 
 
+resource.elasticsearch.index=annotations
+resource.elasticsearch.regionType=region
+resource.elasticsearch.featureType=feature
+resource.elasticsearch.organismType=organism
 
 
