--- a/resource-elasticsearch-local.properties
+++ b/resource-elasticsearch-local.properties
@@ -9,3 +9,8 @@ resource.elasticsearch.local.pathlogs=/Users/gv1/Documents/Data/es/logs
 resource.elasticsearch.local.pathdata=/Users/gv1/Documents/Data/es/data
 
 
+resource.elasticsearch.index=annotations
+resource.elasticsearch.regionType=region
+resource.elasticsearch.featureType=feature
+resource.elasticsearch.organismType=organism
+
