--- a/resource-elasticsearch-public.properties
+++ b/resource-elasticsearch-public.properties
@@ -11,3 +11,8 @@ resource.elasticsearch.address.port=9300
 
 
 
+resource.elasticsearch.index=annotations
+resource.elasticsearch.regionType=region
+resource.elasticsearch.featureType=feature
+resource.elasticsearch.organismType=organism
+
