--- a/resource-elasticsearch-testserver.properties
+++ b/resource-elasticsearch-testserver.properties
@@ -9,3 +9,8 @@ resource.elasticsearch.local.pathlogs=/nfs/pathdb/crawl/es/logs
 resource.elasticsearch.local.pathdata=/nfs/pathdb/crawl/es/data
 
 
+resource.elasticsearch.index=annotations
+resource.elasticsearch.regionType=region
+resource.elasticsearch.featureType=feature
+resource.elasticsearch.organismType=organism
+
