--- a/ivy.xml
+++ b/ivy.xml
@@ -9,7 +9,7 @@
     <dependencies>
     
         <!-- shared by all -->
-        <dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="*->compile" />
+        <dependency org="postgresql" name="postgresql" rev="8.3-604.jdbc3" conf="*->compile" />
         <dependency org="org.mybatis" name="mybatis" rev="3.0.4"/>
         <dependency org="org.mybatis" name="mybatis-hazelcast" rev="1.0.0" conf="*->*"/>
         
@@ -19,7 +19,7 @@
         <dependency org="org.elasticsearch" name="elasticsearch" rev="0.15.2" />
         
         <!-- only needed at compile time -->
-        <dependency org="javax.servlet" name="com.springsource.javax.servlet" rev="2.5.0" conf="compile->compile"/>
+        <dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile->compile"/>
         <dependency org="junit" name="junit" rev="4.8.2" conf="compile->default" />
         
         <!--  only ever needed to run jetty -->
@@ -28,13 +28,14 @@
         <!--  only ever needed for the jar -->
         <dependency org="args4j" name="args4j" rev="2.0.12" conf="jar,compile->default" />
         
+        
         <!--  only needed in the war -->
         <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.dbcp" rev="1.2.2.osgi" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.web.servlet" rev="3.0.5.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.context.support" rev="3.0.5.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.transaction" rev="3.0.5.RELEASE"  conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.jdbc" rev="3.0.5.RELEASE" conf="war,compile->compile" />
-        <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0" conf="war,compile->*"/>
+        <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0" conf="war,compile->*"/> 
         
         
     </dependencies>
