Property file updates.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15939 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-elasticsearch-local.properties
+++ b/resource-elasticsearch-local.properties
@@ -1,12 +1,12 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
 deploy.name=crawl-es-local
 
-alignments=/Users/gv1/Documents/Code/alignments.json
+alignments=etc/alignments.json
 showParameters=true
 
 resource.type=elasticsearch-local
-resource.elasticsearch.local.pathlogs=/Users/gv1/Documents/Data/es/logs
-resource.elasticsearch.local.pathdata=/Users/gv1/Documents/Data/es/data
+resource.elasticsearch.local.pathlogs=es/logs
+resource.elasticsearch.local.pathdata=es/data
 
 
 resource.elasticsearch.index=annotations
