--- a/resource-elasticsearch-public.properties
+++ b/resource-elasticsearch-public.properties
@@ -5,7 +5,7 @@ alignments=
 showParameters=true
 
 resource.type=elasticsearch-remote
-resource.elasticsearch.address.host=pathdbsrv1a
+resource.elasticsearch.address.host=t81-lucene
 resource.elasticsearch.address.port=9300
 
 
