Fixed coordinate system. Added initial remote BAM ability.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15957 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,24 @@ dependencies {
     
 }
 
+//task print_configs(dependsOn: assemble) << {
+//    configurations.each { config ->
+ //       println config
+        
+        //config.files.each { file -> 
+            //println "--" + file
+        //}
+        
+   // }
+    
+    //dependencies.each { dependency ->
+      //  println dependency
+    //}
+    
+//}
+
+
+
 
 Properties props = new Properties()
 props.load(new FileInputStream(config))
