--- a/resource-chado-public.properties
+++ b/resource-chado-public.properties
@@ -1,7 +1,7 @@
 deploy.dir=/nfs/pathdb/genedb/services/webapps
 deploy.name=snapshot-services
 
-alignments=
+alignments=etc/alignments.json
 showParameters=false
 
 resource.type=chado-postgres
