Updated property file.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15980 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-elasticsearch-testserver.properties
+++ b/resource-elasticsearch-testserver.properties
@@ -1,13 +1,12 @@
-deploy.dir=/nfs/pathdb/omixed/tomcat/testing/webapps
-deploy.name=judo-cached
+deploy.dir=/nfs/pathdb/genedb/services-testing/webapps
+deploy.name=elasticsearch-services
 
-alignments=/nfs/pathdb/crawl/ini/pathogens.json
+alignments=etc/alignments.json
 showParameters=true
 
-resource.type=elasticsearch-local
-resource.elasticsearch.local.pathlogs=/nfs/pathdb/crawl/es/logs
-resource.elasticsearch.local.pathdata=/nfs/pathdb/crawl/es/data
-
+resource.type=elasticsearch-remote
+resource.elasticsearch.address.host=t81-lucene
+resource.elasticsearch.address.port=9300
 
 resource.elasticsearch.index=annotations
 resource.elasticsearch.regionType=region
