--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
     mavenRepo urls: ["http://download.java.net/maven/2"]
     mavenRepo urls: ["http://repository.jboss.org/maven2"]
     
+    mavenRepo urls: ["http://www.ebi.ac.uk/~maven/m2repo"]
+    
     mavenRepo urls: ["http://repository.springsource.com/maven/bundles/release"]
     mavenRepo urls: ["http://repository.springsource.com/maven/bundles/external"]
     mavenRepo urls: ["http://repository.springsource.com/maven/bundles/milestone"]
@@ -48,7 +50,6 @@ dependencies {
     
     compile group: 'org.codehaus.jackson', name: 'jackson-xc', version:'1.7.5'
     
-    
     compile group: 'args4j', name: 'args4j', version:'2.0.12'
     
     compile group: "org.apache.commons", name:"com.springsource.org.apache.commons.dbcp", version:"1.2.2.osgi"
@@ -56,6 +57,8 @@ dependencies {
     compile group: "org.springframework", name:"org.springframework.jdbc", version:"3.0.5.RELEASE"
     
     compile group: 'org.mybatis', name: 'mybatis-spring', version:'1.0.0'
+    
+    compile group: 'uk.ac.ebi.das', name:'jdas', version: '1.0.1'
     
     compile fileTree(dir: 'lib/local', includes: ['**.jar'])
     
