--- a/resource-elasticsearch-remote.properties
+++ b/resource-elasticsearch-remote.properties
@@ -7,7 +7,7 @@ showParameters=true
 resource.type=elasticsearch-remote
 resource.elasticsearch.address.host=localhost
 resource.elasticsearch.address.port=9300
-
+resource.elasticsearch.cluster.name=elasticsearch
 
 resource.elasticsearch.index=annotations
 resource.elasticsearch.regionType=region
