--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%p [%C:%L] %m%n
 
-log4j.logger.org.genedb.crawl=DEBUG
-log4j.logger.java.sql=DEBUG
-log4j.logger.com.ibatis=DEBUG
-log4j.logger.org.postgresql=DEBUG
+#log4j.logger.org.genedb.crawl=DEBUG
+#log4j.logger.java.sql=DEBUG
+#log4j.logger.com.ibatis=DEBUG
+#log4j.logger.org.postgresql=DEBUG
