--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,5 +1,5 @@
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=DEBUG, stdout, logfile
+log4j.rootLogger=INFO, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -14,11 +14,11 @@ log4j.appender.logfile.MaxBackupIndex=3
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.logger.org.genedb.crawl=DEBUG
-log4j.logger.java.sql=DEBUG
-log4j.logger.com.ibatis=TRACE
-log4j.logger.org.postgresql=DEBUG
-log4j.logger.org.elasticsearch=DEBUG
+#log4j.logger.org.genedb.crawl=DEBUG
+#log4j.logger.java.sql=DEBUG
+#log4j.logger.com.ibatis=TRACE
+#log4j.logger.org.postgresql=DEBUG
+#log4j.logger.org.elasticsearch=DEBUG
 
 #log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
 
