--- a/resource-elasticsearch-remote.properties
+++ b/resource-elasticsearch-remote.properties
@@ -1,5 +1,5 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
-deploy.name=crawl-es-remote
+deploy.name=services
 
 alignments=etc/alignments.json
 showParameters=true
