--- a/resource-elasticsearch-testserver.properties
+++ b/resource-elasticsearch-testserver.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/genedb/services-testing/webapps
-deploy.name=elasticsearch-services
+deploy.dir=/nfs/pathdb/genedb/services-test/webapps
+deploy.name=services
 
 alignments=etc/alignments.json
 showParameters=true
@@ -7,6 +7,7 @@ showParameters=true
 resource.type=elasticsearch-remote
 resource.elasticsearch.address.host=t81-lucene
 resource.elasticsearch.address.port=9300
+resource.elasticsearch.cluster.name=test
 
 resource.elasticsearch.index=annotations
 resource.elasticsearch.regionType=region
