--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,59 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app version="2.4"
-         xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
-         http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" >
-    
-   
-    <context-param>
-        <param-name>log4jConfigLocation</param-name>
-        <param-value>/WEB-INF/log4j.properties</param-value>
-    </context-param>  
-    
-    <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-    </listener>
-    
-    
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    
-    
-    
-    <servlet>
-        <servlet-name>crawl</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
+<web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
+         http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-    <servlet-mapping>
-        <servlet-name>crawl</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>/WEB-INF/log4j.properties</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	</listener>
+
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+
+
+
+
+
+	<servlet>
+		<servlet-name>crawl</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>crawl</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
     
-    <listener>
-        <listener-class>
-            org.genedb.crawl.servlet.CrawlServletContextListener
-        </listener-class>
-    </listener>
     
     
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>
+    <!-- this is for the Web-Artemis.inc file -->
+	<mime-mapping>
+		<extension>.inc</extension>
+		<mime-type>text/html</mime-type>
+	</mime-mapping>
+
+
+
+
+	<listener>
+		<listener-class>org.genedb.crawl.servlet.CrawlServletContextListener</listener-class>
+	</listener>
+
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
             /WEB-INF/applicationContext.xml
          </param-value>
-         <!-- /WEB-INF/applicationContext-security.xml -->
-    </context-param>
+		<!-- /WEB-INF/applicationContext-security.xml -->
+	</context-param>
 
-    <welcome-file-list>
-        <welcome-file>
+	<welcome-file-list>
+		<welcome-file>
             index.jsp
         </welcome-file>
-    </welcome-file-list>
+	</welcome-file-list>
 
 </web-app>
 
